[package]
name = "blaze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
num_cpus = "1.15.0"
prost = "0.11.9"
quick-protobuf = "0.8.1"
rayon = "1.7.0"
serde_json = "1.0.96"
threadpool = "1.8.1"
